--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -11,6 +11,10 @@
   right: 40px;
   z-index: 5;
 
+  .empty-message {
+    font-style: 18px;
+    margin: 50px auto;
+  }
   .cart-items {
     height: 240px;
     display: flex;
